compiler/test-data/parser/expressions/errors/missing_operand.frel
module expressions.errors.missing_operand

blueprint Bad {
    x : i32 = 1 +
}
